# test_dos32

./: .gitignore  Cargo.toml  Makefile  build  build.rs  build_release  run.bat
.cargo/: config.toml
src/: builtins.rs  main.rs
