[package]
edition = "2021"
name = "tstdos32"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-cp = "0.0.1"
null-terminated = "0.3.17"

[build-dependencies]
dos-cp = "0.0.1"
dos-cp-generator = "0.0.1"
