[package]
edition = "2021"
name = "tstdos32"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
#arrayvec = { version = "0.7.2", default-features = false }
dos-cp = "0.0.2"
rlibc = "1.0.0"

[build-dependencies]
dos-cp = "0.0.2"
dos-cp-generator = "0.0.2"
